# CuteChart

./: CLAUDE.md  CMakeLists.txt  Changelog.md  Readme.md
src/: boxwhisker.h  chartaxismanager.cpp  chartaxismanager.h  chartconfig.cpp  chartconfig.h  chartconfiguration.cpp  chartconfiguration.h  chartexporter.cpp  chartexporter.h  charts.h  chartview.cpp  chartview.h  chartview_pimpl.cpp  chartview_pimpl.h  chartview_refactored.h  chartviewprivate.cpp  chartviewprivate.h  example.cpp  listchart.cpp  listchart.h  peakcallout.cpp  peakcallout.h  series.cpp  series.h  tools.h
src/configwidgets/: axisconfig.cpp  axisconfig.h
